--- a/england/R/predict.Rmd
+++ b/england/R/predict.Rmd
@@ -130,7 +130,8 @@ y = 4000
 ~0.3Gb per tile
 
 ```{r}
-tracking <- cbind(i = as.integer(), xoff = as.numeric(), yoff = as.numeric(), Gb = as.character(), seconds = as.numeric()) %>% data.frame()
+tracking <- cbind(i = as.integer(), xoff = as.numeric(), yoff = as.numeric(), 
+                  Gb = as.character(), seconds = as.numeric()) %>% data.frame()
 
 
 #calculate tiles
@@ -150,31 +151,48 @@ yremainder  <- ymax-(ysize*ynfull)
 tiles <- data.frame(xoff = rep(seq(1, by = xsize, length.out = xnfull+1), ynfull+1), 
                     yoff = rep(seq(1, by = ysize, length.out = ynfull+1), each = xnfull+1),
                     xsize = rep(c(rep(xsize, length.out = xnfull), xremainder), ynfull+1),
-                    yxize = c(rep(ysize, length.out = (xnfull+1)*ynfull), rep(yremainder, xnfull+1)))
+                    ysize = c(rep(ysize, length.out = (xnfull+1)*ynfull), rep(yremainder, xnfull+1)))
 
-for(i in 186){#196){    #nrow(tiles)) {
+for(i in 187){    #nrow(tiles)) {
 start <- Sys.time()
 
-xoff <- tiles$xoff[i] 
-yoff <- tiles$yoff[i]
+xoff <- tiles$xoff[i]; yoff <- tiles$yoff[i]; xsize <- tiles$xsize[i]; ysize <- tiles$ysize[i]
 
 rasterio <- list(nXOff = xoff, nYOff = yoff, nXSize = xsize, nYSize = ysize, bands = c(1))
 elev_tile <- read_stars(parameters$elev_raster_fn, RasterIO = rasterio, proxy = F, quiet = F)
-
 slope_tile <- read_stars(parameters$slope_raster_fn, RasterIO = rasterio, proxy = F, quiet = F)
+#write tile to raster object
+write_stars(elev_tile, paste0("../data/elev_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+write_stars(slope_tile, paste0("../data/slope_tile", i, "_x", xoff, "_y", yoff, ".tif"))
 
-preds_tile <- c(elev_tile, slope_tile) #stack
+elev_tile <- raster(paste0("../data/elev_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+slope_tile <- raster(paste0("../data/slope_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+preds_tile <- stack(elev_tile, slope_tile)
 names(preds_tile) <- c("elev", "slope")
-rm(elev_tile, slope_tile)
+
+# preds_tile <- c(elev_tile, slope_tile) #stack
+# names(preds_tile) <- c("elev", "slope")
+# elev_tile_sf <- stass
+
+#preds_tile <- st_as_sfc(preds_tile, as_points = T)
+elev_tile_sf <- st_as_sf(elev_tile, as_points = T,  merge = F)
+slope_tile_sf <- st_as_sf(slope_tile, as_points = T,  merge = F)
+
+preds_tile_sf <- sf::st_join(elev_tile_sf, slope_tile_sf, left = F)
+names(preds_tile_sf) <- c("elev", "slope", "geometry")
+
+rm(elev_tile, slope_tile)  # make space in memory
 
 sp_depth <- sp::spTransform(sp_depth, CRSobj = CRS("+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs"))
+depth_sf <- st_as_sf(sp_depth)
+st_crs(depth_sf) <- st_crs(preds_tile_sf)
 
 
-Gb <- object.size(preds_tile)/1000000000
+Gb <- object.size(preds_tile_sf)/1000000000 #calc size in memory
 print(as.character(c(i = i, xoff = xoff, yoff = xoff, Gb = Gb)))
 
-krige_out <- gstat::krige(formula = cbrt_depth ~ elev + slope, maxdist = 50, 
-                          locations = sp_depth, 
+                                                                                                      krige_out <- gstat::krige(formula = cbrt_depth ~ elev + slope, maxdist = 500, 
+                          locations = depth_sf, 
                           newdata = preds_tile, 
                           model = model.geo)
 
@@ -185,7 +203,7 @@ end <- Sys.time(); time <- difftime(end, start, units = "mins")
 tracking <- rbind(tracking, c(i = i, xoff = xoff, yoff = yoff, Gb = Gb, minutes = time))
 names(tracking) <- c("i", "xoff", "yoff", "Gb", "minutes")
 
-rm(preds_tile, krige_out)
+rm(preds_tile, krige_out) # make space in memory
 }
 
 
