--- a/england/R/predict.Rmd
+++ b/england/R/predict.Rmd
@@ -65,32 +65,57 @@ library(elevatr)
 library(geoR)
 library(gstat)
 library(stars)
+
+source("rsquared_funs.R")
+source("backtransform.R")
 ```
+
+```{r}
+#pre-set which back-transformation to use
+btf <- function(x) {
+  backtransform(x = x, tf = parameters$tf)
+}
+```
+
 ## 1. Import previously prepared data
 
 ```{r}
+#import model and data
+
+# import model
 model.geo <- readRDS("~/GitHub/Peat_Depth_Model/england/outputs/model.geo_eng_run_20200823-1202.rds")
+
+# import observations
 sp_depth <- readRDS(parameters$inputs_fn)
-```
 
-```{r}
-summary(model.geo)
-```
+# columns which identify the model run
+run_tag <- data.frame(area_abbr = rep(parameters$area_abbr, nrow(sp_depth)), 
+                      rundate = rep(parameters$rundate, nrow(sp_depth)))
+# the data used to generate the model
+dat_sp <- cbind(sp_depth, 
+                parameters$area_abbr, parameters$rundate)
+names(dat_sp) <- c(names(sp_depth), "area_abbr", "rundate")
+dat_sp$id <- seq(1,nrow(sp_depth)) #add an index
+# remove duplicates 
+dat_sp <- remove.duplicates(obj = dat_sp)
+dat_sf <- st_as_sf(dat_sp)
 
-
-```{r}
-# import elevation and slope
-
+# import predictors as `stars` objects
 elevation_st <- stars::read_stars(parameters$elev_raster_fn)
 slope_st <- read_stars(parameters$slope_raster_fn)
  
 preds_st <- c(elev = elevation_st, slope = slope_st)
 names(preds_st) <- c("elev", "slope")
-
+preds_st <- st_set_crs(x = preds_st, value = st_crs(sp_depth))
 #rm(elevation_st, slope_st)
+```
 
-#plot(preds_st[1])
+```{r}
+#check projections are the same
+st_crs(preds_st) == st_crs(dat_sf)
 
+# re-project
+#dat_sp <- sp::spTransform(x = dat_sp, CRSobj = crs(sp_depth))
 ```
 
 $from
@@ -153,57 +178,83 @@ tiles <- data.frame(xoff = rep(seq(1, by = xsize, length.out = xnfull+1), ynfull
                     xsize = rep(c(rep(xsize, length.out = xnfull), xremainder), ynfull+1),
                     ysize = c(rep(ysize, length.out = (xnfull+1)*ynfull), rep(yremainder, xnfull+1)))
 
-for(i in 187){    #nrow(tiles)) {
+
+i <- 187
+#for(i in 1:nrow(tiles)) {
 start <- Sys.time()
 
 xoff <- tiles$xoff[i]; yoff <- tiles$yoff[i]; xsize <- tiles$xsize[i]; ysize <- tiles$ysize[i]
 
 rasterio <- list(nXOff = xoff, nYOff = yoff, nXSize = xsize, nYSize = ysize, bands = c(1))
-elev_tile <- read_stars(parameters$elev_raster_fn, RasterIO = rasterio, proxy = F, quiet = F)
+elev_tile <- read_stars(parameters$elev_raster_fn, RasterIO = rasterio, proxy = F, quiet = F) 
 slope_tile <- read_stars(parameters$slope_raster_fn, RasterIO = rasterio, proxy = F, quiet = F)
-#write tile to raster object
-write_stars(elev_tile, paste0("../data/elev_tile", i, "_x", xoff, "_y", yoff, ".tif"))
-write_stars(slope_tile, paste0("../data/slope_tile", i, "_x", xoff, "_y", yoff, ".tif"))
 
-elev_tile <- raster(paste0("../data/elev_tile", i, "_x", xoff, "_y", yoff, ".tif"))
-slope_tile <- raster(paste0("../data/slope_tile", i, "_x", xoff, "_y", yoff, ".tif"))
-preds_tile <- stack(elev_tile, slope_tile)
+preds_tile <- c(elev_tile, slope_tile)
 names(preds_tile) <- c("elev", "slope")
 
-# preds_tile <- c(elev_tile, slope_tile) #stack
-# names(preds_tile) <- c("elev", "slope")
-# elev_tile_sf <- stass
+# elev_tile_r <- raster(elev_tile$elev_eng_5m.tif, crs = st_crs(elev_tile))
+# elev_tile_r[is.na(elev_tile_r)] <- 9999
+# slope_tile_r <- raster(slope_tile$slope_eng_5m.tif, crs = st_crs(slope_tile))
+# slope_tile_r[is.na(slope_tile_r)] <- 9999
+# 
+# elev_tile <- read_stars()
 
-#preds_tile <- st_as_sfc(preds_tile, as_points = T)
-elev_tile_sf <- st_as_sf(elev_tile, as_points = T,  merge = F)
-slope_tile_sf <- st_as_sf(slope_tile, as_points = T,  merge = F)
+# elev_tile_sf <- st_as_sf(elev_tile)
+# slope_tile_sf <- st_as_sf(slope_tile)
+# 
+# preds_tile_sf <- sf::st_join(elev_tile_sf, slope_tile_sf, left = F)
+# names(preds_tile_sf) <- c("elev", "slope")
 
-preds_tile_sf <- sf::st_join(elev_tile_sf, slope_tile_sf, left = F)
-names(preds_tile_sf) <- c("elev", "slope", "geometry")
+# #write tile to raster object
+# write_stars(elev_tile, paste0("../data/elev_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+# write_stars(slope_tile, paste0("../data/slope_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+# 
+# elev_tile <- raster(paste0("../data/elev_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+# slope_tile <- raster(paste0("../data/slope_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+# preds_tile <- stack(elev_tile, slope_tile)
 
-rm(elev_tile, slope_tile)  # make space in memory
+# # preds_tile <- c(elev_tile, slope_tile) #stack
+# # names(preds_tile) <- c("elev", "slope")
+# # elev_tile_sf <- stass
+# 
+# #preds_tile <- st_as_sfc(preds_tile, as_points = T)
+# elev_tile_sf <- st_as_sf(elev_tile, as_points = T,  merge = F)
+# slope_tile_sf <- st_as_sf(slope_tile, as_points = T,  merge = F)
+# 
+# preds_tile_sf <- sf::st_join(elev_tile_sf, slope_tile_sf, left = F)
+# names(preds_tile_sf) <- c("elev", "slope", "geometry")
 
-sp_depth <- sp::spTransform(sp_depth, CRSobj = CRS("+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs"))
-depth_sf <- st_as_sf(sp_depth)
-st_crs(depth_sf) <- st_crs(preds_tile_sf)
+# rm(elev_tile, slope_tile)  # make space in memory
+
+# sp_depth <- sp::spTransform(sp_depth, CRSobj = CRS("+proj=tmerc +lat_0=49 +lon_0=-2 +k=0.9996012717 +x_0=400000 +y_0=-100000 +ellps=airy +towgs84=446.448,-125.157,542.06,0.1502,0.247,0.8421,-20.48939999999 +units=m +no_defs"))
+# depth_sf <- st_as_sf(sp_depth)
+# st_crs(depth_sf) <- st_crs(preds_tile_sf)
 
 
-Gb <- object.size(preds_tile_sf)/1000000000 #calc size in memory
+Gb <- object.size(preds_tile)/1000000000 #calc size in memory
 print(as.character(c(i = i, xoff = xoff, yoff = xoff, Gb = Gb)))
 
-                                                                                                      krige_out <- gstat::krige(formula = cbrt_depth ~ elev + slope, maxdist = 500, 
-                          locations = depth_sf, 
-                          newdata = preds_tile, 
-                          model = model.geo)
+                                                                                                      krige.out <- gstat::krige(formula = cbrt_depth ~ elev + slope, 
+                       maxdist = 2500, na.action = na.pass, 
+                       locations = dat_sf, 
+                       newdata = preds_tile, 
+                       model = model.geo)
 
-write_stars(krige_out["var1.pred"], paste0("../outputs/pred_tile", i, "_x", xoff, "_y", yoff, ".tif"))
-write_stars(krige_out["var1.var"], paste0("../outputs/var_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+                                                                                                      #backtransform
+krige.out <- krige.out %>% mutate(pred.btf = btf(var1.pred), 
+                                  var.btf = btf(var1.var),
+                                  LPI = pred.btf - 1.96 * sqrt(var.btf),
+                                  UPI = pred.btf + 1.96 * sqrt(var.btf),
+                                  interval = UPI - LPI)
+
+write_stars(krige.out["var1.pred"], paste0("../outputs/pred_tile", i, "_x", xoff, "_y", yoff, ".tif"))
+write_stars(krige.out["var1.var"], paste0("../outputs/var_tile", i, "_x", xoff, "_y", yoff, ".tif"))
 
 end <- Sys.time(); time <- difftime(end, start, units = "mins")
 tracking <- rbind(tracking, c(i = i, xoff = xoff, yoff = yoff, Gb = Gb, minutes = time))
 names(tracking) <- c("i", "xoff", "yoff", "Gb", "minutes")
 
-rm(preds_tile, krige_out) # make space in memory
+rm(preds_tile, krige.out) # make space in memory
 }
 
 
